fix conflict z-index

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -6,6 +6,9 @@ body {
   font-family: var(--font-montserrat), Arial, Helvetica, sans-serif;
 }
 
+bwchat#bwc-wrap #bwc-widget-action,
+bwchat #bwc-widget-action,
+#bwc-wrap #bwc-widget-action,
 #bwc-widget-action {
   z-index: 9998 !important;
 }
